crt: Add support for _invoke_watson and _invalid_parameter* functions into all CRT import libraries
Functions _invoke_watson(), _invalid_parameter(), _invalid_parameter_noinfo(),
_invalid_parameter_noinfo_noreturn() are supported since msvcr80.dll.

Function _invalid_parameter_noinfo_noreturn() is supported since msvcr100.dll.
For older CRT import libraries provide simple wrapper around the
_invalid_parameter() and _invoke_watson() calls.

OS system version of msvcrt.dll provides function _invalid_parameter()
since Windows Vista but it is mostly useless. Seems that it does absolutely
nothing. Moreover OS system version of msvcrt.dll does not provide
_set_invalid_parameter_handler() function, so application has no way to
instruct what OS system version of _invalid_parameter() should call.
Therefore threat msvcrt.dll's _invalid_parameter() function as unusable and
disable it in msvcrt.def.in file.

Note that MS WDK 7.1.0 toolchain which allows to link against the Windows 7
OS system msvcrt.dll library, does not use the msvcrt.dll's _invalid_parameter
symbol but rather provides its own code statically linked into executable.
This can indicate the fact that the msvcrt.dll's _invalid_parameter is not
usable or compatible with msvcr80+.

So for pre-msvcr80 CRT import libraries and also for OS system msvcrt.dll
import library provide mingw-w64 implementation of those functions.

_invalid_parameter() implementation uses _get_invalid_parameter_handler()
to retrieve the invalid parameter handler, which is already provided by
mingw-w64 for all CRT import libraries.

Implementation of _invoke_watson() mimics the behavior of msvcr80+ and UCRT.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -342,6 +342,10 @@ src_msvcrt=\
   misc/_get_timezone.c \
   misc/_get_tzname.c \
   misc/_get_wpgmptr.c \
+  misc/_invalid_parameter.c \
+  misc/_invalid_parameter_noinfo.c \
+  misc/_invalid_parameter_noinfo_noreturn.c \
+  misc/_invoke_watson.c \
   misc/_recalloc.c \
   misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
@@ -902,6 +906,9 @@ src_pre_msvcr80=\
   misc/_get_tzname.c \
   misc/_get_wpgmptr.c \
   misc/_initterm_e.c \
+  misc/_invalid_parameter.c \
+  misc/_invalid_parameter_noinfo.c \
+  misc/_invoke_watson.c \
   misc/_recalloc.c \
   misc/_set_doserrno.c \
   misc/_set_errno.c \
@@ -922,6 +929,7 @@ src_pre_msvcr80=\
   string/wcstok.c
 
 src_pre_msvcr100=\
+  misc/_invalid_parameter_noinfo_noreturn.c \
   misc/imaxdiv.c
 
 src_pre_msvcr110=\
