crt: Fix mingw-w64 implementation of wcstok and wcstok_s functions
wcstok_s() differs from wcstok() just in:
- validation of _Context and _Delim arguments
- setting errno for invalid arguments
- calling exception handler for invalid arguments

So split wcstok_s() and wcstok() into two functions.
Do not set errno in wcstok() function.
Call invalid argument exception handler in wcstok_s() function.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -584,6 +584,7 @@ src_msvcrt32=\
   misc/wcsnlen.c \
   misc/wcstoimax.c \
   misc/wcstoumax.c \
+  secapi/wcstok_s.c \
   stdio/_fseeki64.c \
   stdio/_fstat64.c \
   stdio/_fstat64i32.c \
@@ -642,6 +643,7 @@ src_msvcrt64=\
   misc/strnlen.c \
   misc/wassert.c \
   misc/wcsnlen.c \
+  secapi/wcstok_s.c \
   stdio/_fseeki64.c \
   stdio/_fstat32.c \
   stdio/_fstat32i64.c \
@@ -920,6 +922,7 @@ src_pre_msvcr80=\
   misc/wassert.c \
   misc/wcsnlen.c \
   secapi/getenv_s.c \
+  secapi/wcstok_s.c \
   stdio/_fseeki64.c \
   stdio/_fstat64i32.c \
   stdio/_ftelli64.c \
