crt: Fix the wording of a fallback #error in func.def.in
This was missed in 33d8fc4ce32fdc9fa1a0486c2f96f08252c6c841; we
no longer use DEF_<ARCH> defines, but rely on the compiler
built-in architecture defines.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/func.def.in
+++ b/mingw-w64-crt/def-include/func.def.in
@@ -41,7 +41,7 @@
 #define F_NON_I386(x) x
 #define F_NON_X64(x) x
 #else
-#error No DEF_<ARCH> is defined
+#error Unrecognized architecture
 #endif
 
 #ifndef F32
