crt: Regenerate Makefile.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/testcases/Makefile.in
+++ b/mingw-w64-crt/testcases/Makefile.in
@@ -1693,11 +1693,11 @@ complex_inc = -I$(top_srcdir)/complex
 @LIB32_TRUE@  tests32/libnewcomplextests.a \
 @LIB32_TRUE@  tests32/libnewcomplextestsld.a
 
-@LIB32_TRUE@tests32_libnewcomplextestsf_a_CPPFLAGS = $(CPPFLAGS32) -D_NEW_COMPLEX_FLOAT=1 $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_libnewcomplextestsf_a_CPPFLAGS = $(CPPFLAGS32) -D_NEW_COMPLEX_FLOAT=1 $(complex_inc)
 @LIB32_TRUE@tests32_libnewcomplextestsf_a_SOURCES = $(check_complex_lib_sources)
-@LIB32_TRUE@tests32_libnewcomplextests_a_CPPFLAGS = $(CPPFLAGS32) -D_NEW_COMPLEX_DOUBLE=1 $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_libnewcomplextests_a_CPPFLAGS = $(CPPFLAGS32) -D_NEW_COMPLEX_DOUBLE=1 $(complex_inc)
 @LIB32_TRUE@tests32_libnewcomplextests_a_SOURCES = $(check_complex_lib_sources)
-@LIB32_TRUE@tests32_libnewcomplextestsld_a_CPPFLAGS = $(CPPFLAGS32) -D_NEW_COMPLEX_LDOUBLE=1 $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_libnewcomplextestsld_a_CPPFLAGS = $(CPPFLAGS32) -D_NEW_COMPLEX_LDOUBLE=1 $(complex_inc)
 @LIB32_TRUE@tests32_libnewcomplextestsld_a_SOURCES = $(check_complex_lib_sources)
 
 # Complex library actual test programs.
@@ -1730,91 +1730,91 @@ complex_inc = -I$(top_srcdir)/complex
 # the main test program calls all three abi versions of the function being
 # tested.
 @LIB32_TRUE@tests32_cabs_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cabs_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cabs $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cabs_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cabs $(complex_inc)
 @LIB32_TRUE@tests32_cabs_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cabs_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_cacos_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cacos_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cacos $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cacos_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cacos $(complex_inc)
 @LIB32_TRUE@tests32_cacos_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cacos_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_cacosh_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cacosh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cacosh $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cacosh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cacosh $(complex_inc)
 @LIB32_TRUE@tests32_cacosh_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cacosh_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_carg_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_carg_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=carg $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_carg_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=carg $(complex_inc)
 @LIB32_TRUE@tests32_carg_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_carg_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_casin_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_casin_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=casin $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_casin_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=casin $(complex_inc)
 @LIB32_TRUE@tests32_casin_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_casin_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_casinh_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_casinh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=casinh $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_casinh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=casinh $(complex_inc)
 @LIB32_TRUE@tests32_casinh_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_casinh_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_catan_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_catan_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=catan $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_catan_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=catan $(complex_inc)
 @LIB32_TRUE@tests32_catan_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_catan_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_catanh_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_catanh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=catanh $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_catanh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=catanh $(complex_inc)
 @LIB32_TRUE@tests32_catanh_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_catanh_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_ccos_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_ccos_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ccos $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_ccos_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ccos $(complex_inc)
 @LIB32_TRUE@tests32_ccos_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_ccos_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_ccosh_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_ccosh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ccosh $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_ccosh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ccosh $(complex_inc)
 @LIB32_TRUE@tests32_ccosh_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_ccosh_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_cexp_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cexp_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cexp $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cexp_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cexp $(complex_inc)
 @LIB32_TRUE@tests32_cexp_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cexp_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_cimag_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cimag_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cimag $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cimag_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cimag $(complex_inc)
 @LIB32_TRUE@tests32_cimag_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cimag_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_clog_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_clog_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=clog $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_clog_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=clog $(complex_inc)
 @LIB32_TRUE@tests32_clog_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_clog_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_conj_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_conj_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=conj $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_conj_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=conj $(complex_inc)
 @LIB32_TRUE@tests32_conj_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_conj_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_cpow_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cpow_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cpow $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cpow_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cpow $(complex_inc)
 @LIB32_TRUE@tests32_cpow_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cpow_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_cproj_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_cproj_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cproj $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_cproj_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=cproj $(complex_inc)
 @LIB32_TRUE@tests32_cproj_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_cproj_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_creal_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_creal_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=creal $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_creal_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=creal $(complex_inc)
 @LIB32_TRUE@tests32_creal_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_creal_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_csin_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_csin_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=csin $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_csin_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=csin $(complex_inc)
 @LIB32_TRUE@tests32_csin_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_csin_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_csinh_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_csinh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=csinh $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_csinh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=csinh $(complex_inc)
 @LIB32_TRUE@tests32_csinh_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_csinh_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_csqrt_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_csqrt_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=csqrt $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_csqrt_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=csqrt $(complex_inc)
 @LIB32_TRUE@tests32_csqrt_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_csqrt_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_ctan_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_ctan_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ctan $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_ctan_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ctan $(complex_inc)
 @LIB32_TRUE@tests32_ctan_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_ctan_LDADD = $(newcomplex_test_lib32) $(LDADD)
 @LIB32_TRUE@tests32_ctanh_SOURCES = complex/main.c
-@LIB32_TRUE@tests32_ctanh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ctanh $(complex_inc) $(AM_CPPFLAGS)
+@LIB32_TRUE@tests32_ctanh_CPPFLAGS = $(CPPFLAGS32) -DTESTFUNC=ctanh $(complex_inc)
 @LIB32_TRUE@tests32_ctanh_LDFLAGS = $(LDFLAGS32) $(AM_LDFLAGS)
 @LIB32_TRUE@tests32_ctanh_LDADD = $(newcomplex_test_lib32) $(LDADD)
 
@@ -1826,11 +1826,11 @@ complex_inc = -I$(top_srcdir)/complex
 @LIB64_TRUE@  tests64/libnewcomplextests.a \
 @LIB64_TRUE@  tests64/libnewcomplextestsld.a
 
-@LIB64_TRUE@tests64_libnewcomplextestsf_a_CPPFLAGS = $(CPPFLAGS64) -D_NEW_COMPLEX_FLOAT=1 $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_libnewcomplextestsf_a_CPPFLAGS = $(CPPFLAGS64) -D_NEW_COMPLEX_FLOAT=1 $(complex_inc)
 @LIB64_TRUE@tests64_libnewcomplextestsf_a_SOURCES = $(check_complex_lib_sources)
-@LIB64_TRUE@tests64_libnewcomplextests_a_CPPFLAGS = $(CPPFLAGS64) -D_NEW_COMPLEX_DOUBLE=1 $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_libnewcomplextests_a_CPPFLAGS = $(CPPFLAGS64) -D_NEW_COMPLEX_DOUBLE=1 $(complex_inc)
 @LIB64_TRUE@tests64_libnewcomplextests_a_SOURCES = $(check_complex_lib_sources)
-@LIB64_TRUE@tests64_libnewcomplextestsld_a_CPPFLAGS = $(CPPFLAGS64) -D_NEW_COMPLEX_LDOUBLE=1 $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_libnewcomplextestsld_a_CPPFLAGS = $(CPPFLAGS64) -D_NEW_COMPLEX_LDOUBLE=1 $(complex_inc)
 @LIB64_TRUE@tests64_libnewcomplextestsld_a_SOURCES = $(check_complex_lib_sources)
 
 # Complex library actual test programs.
@@ -1863,91 +1863,91 @@ complex_inc = -I$(top_srcdir)/complex
 # the main test program calls all three abi versions of the function being
 # tested.
 @LIB64_TRUE@tests64_cabs_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cabs_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cabs $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cabs_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cabs $(complex_inc)
 @LIB64_TRUE@tests64_cabs_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cabs_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_cacos_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cacos_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cacos $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cacos_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cacos $(complex_inc)
 @LIB64_TRUE@tests64_cacos_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cacos_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_cacosh_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cacosh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cacosh $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cacosh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cacosh $(complex_inc)
 @LIB64_TRUE@tests64_cacosh_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cacosh_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_carg_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_carg_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=carg $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_carg_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=carg $(complex_inc)
 @LIB64_TRUE@tests64_carg_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_carg_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_casin_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_casin_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=casin $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_casin_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=casin $(complex_inc)
 @LIB64_TRUE@tests64_casin_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_casin_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_casinh_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_casinh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=casinh $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_casinh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=casinh $(complex_inc)
 @LIB64_TRUE@tests64_casinh_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_casinh_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_catan_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_catan_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=catan $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_catan_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=catan $(complex_inc)
 @LIB64_TRUE@tests64_catan_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_catan_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_catanh_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_catanh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=catanh $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_catanh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=catanh $(complex_inc)
 @LIB64_TRUE@tests64_catanh_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_catanh_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_ccos_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_ccos_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ccos $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_ccos_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ccos $(complex_inc)
 @LIB64_TRUE@tests64_ccos_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_ccos_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_ccosh_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_ccosh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ccosh $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_ccosh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ccosh $(complex_inc)
 @LIB64_TRUE@tests64_ccosh_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_ccosh_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_cexp_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cexp_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cexp $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cexp_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cexp $(complex_inc)
 @LIB64_TRUE@tests64_cexp_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cexp_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_cimag_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cimag_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cimag $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cimag_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cimag $(complex_inc)
 @LIB64_TRUE@tests64_cimag_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cimag_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_clog_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_clog_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=clog $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_clog_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=clog $(complex_inc)
 @LIB64_TRUE@tests64_clog_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_clog_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_conj_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_conj_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=conj $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_conj_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=conj $(complex_inc)
 @LIB64_TRUE@tests64_conj_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_conj_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_cpow_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cpow_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cpow $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cpow_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cpow $(complex_inc)
 @LIB64_TRUE@tests64_cpow_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cpow_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_cproj_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_cproj_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cproj $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_cproj_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=cproj $(complex_inc)
 @LIB64_TRUE@tests64_cproj_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_cproj_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_creal_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_creal_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=creal $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_creal_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=creal $(complex_inc)
 @LIB64_TRUE@tests64_creal_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_creal_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_csin_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_csin_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=csin $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_csin_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=csin $(complex_inc)
 @LIB64_TRUE@tests64_csin_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_csin_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_csinh_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_csinh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=csinh $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_csinh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=csinh $(complex_inc)
 @LIB64_TRUE@tests64_csinh_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_csinh_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_csqrt_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_csqrt_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=csqrt $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_csqrt_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=csqrt $(complex_inc)
 @LIB64_TRUE@tests64_csqrt_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_csqrt_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_ctan_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_ctan_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ctan $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_ctan_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ctan $(complex_inc)
 @LIB64_TRUE@tests64_ctan_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_ctan_LDADD = $(newcomplex_test_lib64) $(LDADD)
 @LIB64_TRUE@tests64_ctanh_SOURCES = complex/main.c
-@LIB64_TRUE@tests64_ctanh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ctanh $(complex_inc) $(AM_CPPFLAGS)
+@LIB64_TRUE@tests64_ctanh_CPPFLAGS = $(CPPFLAGS64) -DTESTFUNC=ctanh $(complex_inc)
 @LIB64_TRUE@tests64_ctanh_LDFLAGS = $(LDFLAGS64) $(AM_LDFLAGS)
 @LIB64_TRUE@tests64_ctanh_LDADD = $(newcomplex_test_lib64) $(LDADD)
 all: all-am
